# ez-share-api/src/main/java/live/himanshuchoudhary/ezshare/models/FileModel.java
@@ -1,0 +1,86 @@
+package live.himanshuchoudhary.ezshare.models;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
+import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import live.himanshuchoudhary.ezshare.util.LocalDateDeserializer;
+import live.himanshuchoudhary.ezshare.util.LocalDateSerializer;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.Id;
+import javax.persistence.Table;
+import java.io.Serializable;
+import java.time.LocalDateTime;
+import java.util.UUID;
+
+@Entity
+@Table(name = "SHARED_FILES")
+public class FileModel implements Serializable {
+    @Id
+    @JsonProperty("id")
+    private UUID id = null;
+
+    @JsonProperty("name")
+    private String name = null;
+
+    @Column(name = "created_on")
+    @JsonProperty("createdOn")
+    @JsonDeserialize(using = LocalDateDeserializer.class)
+    @JsonSerialize(using = LocalDateSerializer.class)
+    private LocalDateTime createdOn = null;
+
+    @Column(name = "size")
+    @JsonProperty("size")
+    private Integer size = null;
+
+    @Column(name = "directory")
+    @JsonProperty("directory")
+    private String directory = null;
+
+    public UUID getId() {
+        return id;
+    }
+    public void setId(UUID id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public LocalDateTime getCreatedOn() {
+        return createdOn;
+    }
+    public void setCreatedOn(LocalDateTime createdOn) {
+        this.createdOn = createdOn;
+    }
+
+    public Integer getSize() {
+        return size;
+    }
+    public void setSize(Integer size) {
+        this.size = size;
+    }
+
+    public String getDirectory() {
+        return directory;
+    }
+    public void setDirectory(String directory) {
+        this.directory = directory;
+    }
+
+    @Override
+    public String toString() {
+        return "FileModel{" +
+                "id=" + id +
+                ", name='" + name + '\'' +
+                ", createdOn=" + createdOn +
+                ", size=" + size +
+                ", directory='" + directory + '\'' +
+                '}';
+    }
+}
