# ez-share-api/src/main/swagger/swagger.yaml
@@ -19,12 +19,13 @@ tags:
 schemes:
 - "http"
 paths:
-  /file/info/{id}:
+  /file/{id}:
     get:
       tags:
       - "file"
       summary: "Get info about the file using the identifier"
       description: ""
+      x-swagger-router-controller: "FileController"
       operationId: "getFileInfo"
       consumes:
       - "application/json"
@@ -40,21 +41,22 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/File"
+            $ref: "#/definitions/FileModel"
         400:
           description: "Invalid ID supplied"
         404:
-          description: "File not found"
+          description: "FileModel not found"
         405:
           description: "Invalid input"
         500:
           description: "Internal server error"
-  /file/download/{id}:
+  /file/{id}/download:
     get:
       tags:
       - "file"
       summary: "Download the file using the identifier"
       description: ""
+      x-swagger-router-controller: "FileController"
       operationId: "downloadFile"
       consumes:
       - "application/json"
@@ -70,11 +72,11 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/File"
+            $ref: "#/definitions/FileModel"
         400:
           description: "Invalid ID supplied"
         404:
-          description: "File not found"
+          description: "FileModel not found"
         405:
           description: "Invalid input"
         500:
@@ -84,6 +86,7 @@ paths:
       tags:
       - "file"
       summary: "Upload a new file"
+      x-swagger-router-controller: "FileController"
       operationId: "uploadFile"
       consumes:
       - "multipart/form-data"
@@ -93,29 +96,30 @@ paths:
         - in: "formData"
           name: "file"
           type: "file"
-          description: "File to upload"
-        - in: "formData"
+          description: "FileModel to upload"
+        - in: "query"
           name: "directory"
           type: "string"
           default: "public"
           description: "Directory to upload file to"
       responses:
         200:
-          description: "File uploaded successfully"
+          description: "FileModel uploaded successfully"
           schema:
-            $ref: "#/definitions/File"
+            $ref: "#/definitions/FileModel"
         400:
           description: "Error in uploading file"
         405:
           description: "Invalid input"
         500:
           description: "Internal server error"
-  /directory/info:
+  /directory:
     get:
       tags:
       - "directory"
       summary: "Get info about the directory using the name"
       description: ""
+      x-swagger-router-controller: "DirectoryController"
       operationId: "getDirectoryInfo"
       consumes:
       - "application/json"
@@ -170,7 +174,7 @@ definitions:
       files:
         type: "array"
         items:
-          $ref: "#/definitions/File"
+          $ref: "#/definitions/FileModel"
   ApiResponse:
     type: "object"
     properties:
